--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <article class="list">
         <ul>
-            <li>Estudar hj e agora
+            <li>Estudar Programação
                 <span><i class="bi-check"></i></span>
                 <span><i class="bi-trash3"></i></span>
             </li>
@@ -36,5 +36,4 @@
 
 </body>
 <script type="module" src="./main.js"></script>
-
 </html>
